# qtchat

./: .clang-format  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  schema.sql
.claude/: settings.local.json
.github/workflows/: build.yml
Client/: CMakeLists.txt  Client.pro  chat.cpp  chat.h  chat.ui  client.cpp  client.h  client.ui  config.json  config.qrc  file.cpp  file.h  file.ui  friend.cpp  friend.h  friend.ui  icon.qrc  index.cpp  index.h  index.ui  main.cpp  msghandle.cpp  msghandle.h  onlineuser.cpp  onlineuser.h  onlineuser.ui  server.cpp  server.h  sharefile.cpp  sharefile.h  sharefile.ui  uploader.cpp  uploader.h
Server/: CMakeLists.txt  OP  Server.pro  clienttask.cpp  clienttask.h  config.json  config.qrc  connect.config  logmanager.cpp  logmanager.h  main.cpp  msghandle.cpp  msghandle.h  msghandler.cpp  msghandler.h  mytcpserver.cpp  mytcpserver.h  mytcpsocket.cpp  mytcpsocket.h  operatedb.cpp  operatedb.h  server.cpp  server.h
build-Client-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.Client.Debug  object_script.Client.Release  ui_chat.h  ui_client.h  ui_file.h  ui_friend.h  ui_index.h  ui_onlineuser.h  ui_sharefile.h
build-Client-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/debug/: moc_chat.cpp  moc_client.cpp  moc_file.cpp  moc_friend.cpp  moc_index.cpp  moc_onlineuser.cpp  moc_server.cpp  moc_sharefile.cpp  moc_uploader.cpp  qrc_config.cpp  qrc_icon.cpp
build-MusicPlayer-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-MusicPlayer-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp  moc_mediaplayer.cpp  moc_playlist.cpp  qrc_icon.cpp
build-Server-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.Server.Debug  object_script.Server.Release
build-Server-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/debug/: moc_clienttask.cpp  moc_mytcpserver.cpp  moc_mytcpsocket.cpp  moc_operatedb.cpp  qrc_config.cpp
build-Wonchat-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.Wonchat.Debug  object_script.Wonchat.Release  ui_login.h  ui_mainwindow.h  ui_registerdialog.h
build-Wonchat-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/debug/: moc_httpmgr.cpp  moc_login.cpp  moc_mainwindow.cpp  moc_registerdialog.cpp  qrc_rc.cpp
common/: CMakeLists.txt  config.cpp  config.h  messagedispatcher.cpp  messagedispatcher.h  packet.cpp  packet.h  password.cpp  password.h  pathsafety.cpp  pathsafety.h  protocol.cpp  protocol.h
docs/: architecture.md  protocol.md  resume-bullets.md
tests/: CMakeLists.txt  test_dispatcher.cpp  test_frame.cpp  test_password.cpp  test_path.cpp
tools/: generate_cert.sh  integration_test.py  stress_test.py
